# dspace-python-client

./: .gitignore  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  extract-dspace-client.plan.md  pyproject.toml  requirements.txt
docs/: API_GOTCHAS.md  README.md
dspace_client/: __init__.py  attribution.py  auth.py  batch.py  concurrency.py  core.py  docs.py  exceptions.py  oai.py  promo.py  rest_pdf_cache.py  throttle.py  version.py  versions.py
examples/: advanced_auth.py  basic_usage.py  bulk_import.py  count_items_with_pdf_bitstream.py  count_items_with_pdf_bitstream_oai.py  delete_item.py  extract_items_by_year.py  ingest_bitstream.py  link_author_authorities.py  realtime_REF.py  recent_items_with_submitters.py
examples/full-text-finder/: README.md  connect.py  dspace_candidates.py  logging_audit.py  main.py  resolve_chain.py  sources.py
examples/link_author_authorities/: main.py
examples/seed/: README.md  megaspace.py  minispace.py  publication-page-config.json  publication_page.py  seed_client.py  seed_data.py
examples/seed/seedpacks/: default.yml
tests/: conftest.py  test_auth.py  test_batch.py  test_concurrency.py  test_core.py  test_link_author_orcid_normalize.py  test_oai.py  test_rest_pdf_cache.py  test_version.py
