[project]
name = "dspace-client"
version = "0.1.0"
description = "Python client for DSpace REST API (v7, v8, v9)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Bram Luyten", email = "bram@atmire.com"}
]
keywords = ["dspace", "rest-api", "client", "repository"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "orjson>=3.10.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "gitpython>=3.1.0",  # For git operations
    "python-dateutil>=2.8.0",  # For date manipulation
    "typer>=0.12.0",  # For CLI tools
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
examples = [
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/dspace-python-client"
Documentation = "https://github.com/yourusername/dspace-python-client#readme"
Repository = "https://github.com/yourusername/dspace-python-client"
"Bug Tracker" = "https://github.com/yourusername/dspace-python-client/issues"
"DSpace REST Contract" = "https://github.com/DSpace/RestContract"

[project.scripts]
dspace-docs = "dspace_client.docs:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "T201", "S608", "A003", "COM812", "ISC001"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"examples/ingest_bitstream.py" = ["INP001"]
"tests/test_fulltext_finder_url_validator.py" = ["INP001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
